# b42

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  configure.ac  readme.md
documentation/: how-to-install-windows.md  readme.md
kernel-src/: bootstrap.s  kernel.c  linker.ld  uart.c
kernel-src/include/: riscv-defs.h  uart.h  vf2-defs.h
src/: bootstrap.s  kernel.c  linker.ld  uart.c
src/include/: riscv.h  uart.h
src/kenrel/portable/: kernel.zig
src/kenrel/risc-v/basic/: bootstrap.s
src/kenrel/risc-v/risc-v basic/: bootstrap.s
src/kenrel/risc-v/rvvm/: linker-rvvm.ld  stack.s  uart.s
src/kenrel/risc-v/vf2/: linker-vf2.ld  stack.s
src/kenrel/vf2/: bootstrap-vf2.s  linker-vf2.ld  stack-vf2.s  stack.s
src/kernel/: kernel.c
src/kernel/Display/: display.c  draw.h  hdmi.h
src/visionfive2/: bootstrap.s  linker.ld  uart.c
tools-src/tools-for-X5/tools/: readme.md
